# PolyFit

./: .gitattributes  .gitignore  .gitignore~  CMakeLists.txt  How_to_deploy_for_mac.txt  PolyFit.pro  PolyFit.sln  ReadMe-data.md  ReadMe-data.txt  ReadMe-exe.txt  ReadMe.md  ReadMe.txt  toy_data.bvg
3rd_QGLViewer-2.6.3/: 3rd_qglviewer.pro  3rd_qglviewer.vcproj  3rd_qglviewer.vcxproj  CMakeLists.txt  config.h  keyFrameInterpolator.cpp  keyFrameInterpolator.h  manipulatedCameraFrame.cpp  manipulatedFrame.h  qglviewer.cpp  qglviewer.h
3rd_glpk/: 3rd_glpk.pro  3rd_glpk.vcxproj  3rd_glpk.vcxproj.filters  CMakeLists.txt  Makefile.am  Makefile.in  README  config.h
3rd_glpk/amd/: amd_internal.h
3rd_glpk/api/: asnhall.c  asnlp.c  asnokalg.c  cplex.c  cpp.c  gridgen.c  maxffalg.c  mcflp.c  mcfokalg.c  minisat1.c  mpl.c  npp.c  prmip.c  prob.h  prob1.c  prob2.c  prob3.c  rdmaxf.c  rdmcf.c  rdprob.c  rdsol.c  strong.c  topsort.c  wcliqex.c  weak.c  wrasn.c  wrcc.c  wript.c  wrmaxf.c  wrmcf.c  wrmip.c
3rd_glpk/bflib/: btf.c  btf.h  fhvint.c  fhvint.h  luf.c  luf.h  lufint.h  scf.h  sgf.c  sgf.h  sva.c  sva.h
3rd_glpk/draft/: bfd.c  glpapi07.c  glpapi09.c  glpapi12.c  glpapi13.c  glphbm.c  glphbm.h  glpios03.c  glpios09.c  glpios12.c  glpipm.c  glpipm.h  glpmat.h  glprgr.c  glprgr.h  glpscl.c  glpspm.c  glpspm.h  glpssx.h  glpssx01.c  glpssx02.c  ios.h
3rd_glpk/env/: alloc.c  error.c  stdc.c  stdc.h  stream.c  tls.c
3rd_glpk/intopt/: cfg.c  cfg1.c  clqcut.c  gmigen.c  mirgen.c
3rd_glpk/misc/: avl.c  bignum.c  bignum.h  dimacs.c  dimacs.h  dmp.h  ffalg.h  fp2rat.c  fvs.c  fvs.h  gcd.c  jd.c  keller.c  keller.h  ks.c  mc21a.h  misc.h  mt1.h  mygmp.c  okalg.c  qmd.h  relax4.c  round2n.c  str2int.c  str2num.c  triang.h  wclique.h  wclique1.h
3rd_glpk/mpl/: mpl.h  mpl1.c  mpl2.c  mpl3.c  mpl4.c  mpl5.c  mplsql.c
3rd_glpk/npp/: npp.h  npp2.c  npp3.c  npp4.c  npp5.c  npp6.c
3rd_glpk/proxy/: proxy.c  proxy.h  proxy1.c
3rd_glpk/simplex/: spxat.c  spxchuzr.h  spxlp.c  spxprim.c  spychuzc.h  spychuzr.c
3rd_glpk/zlib/: README  zio.c  zutil.h
3rd_scip/: 3rd_scip.pro  3rd_scip.vcxproj  CMakeLists.txt
3rd_scip/examples/: circle.c  circle.vcxproj  circle.vcxproj.filters
3rd_scip/lpi/: lpi_spx2.cpp
3rd_scip/nlpi/: nlpi_all.c  nlpi_ipopt_dummy.c  nlpi_worhp_dummy.c  struct_nlpi.h
3rd_scip/objscip/: objeventhdlr.h  objmessagehdlr.cpp  objvardata.h
3rd_scip/scip/: 3rd_scip.pro  bandit.c  bandit_ucb.c  bandit_ucb.h  bitencode.h  boundstore.c  branch_mostinf.h  branch_multaggr.h  compr_xyz.h  cons_and.h  cons_bivariate.h  cons_bounddisjunction.h  cons_linking.c  cons_linking.h  cons_logicor.c  cons_nonlinear.c  cons_orbitope.c  cons_superindicator.c  cons_superindicator.h  cuts.c  debug.h  dialog_default.h  event_solvingphase.c  heur.c  heur_bound.c  heur_crossover.h  heur_fixandinfer.h  heur_fracdiving.h  heur_indicator.h  heur_reoptsols.c  heur_shiftandpropagate.h  heur_shifting.c  heur_simplerounding.h  heur_veclendiving.c  heur_veclendiving.h  heuristics.c  implics.h  interrupt.c  libscip.vcxproj  libscip.vcxproj.filters  (+35 more)
3rd_scip/soplex/: libsoplex.vcxproj  libsoplex.vcxproj.filters
3rd_scip/tclique/: tclique_def.h
Example/: CMakeLists.txt  main.cpp
PolyFit/: CMakeLists.txt  PolyFit.pro  PolyFit.vcxproj  PolyFit.vcxproj.filters  main.cpp  main_window.cpp  main_window.h  main_window.ui  paint_canvas.cpp  paint_canvas.h
PolyFit/Mac/: PolyFit.plist
PolyFit/Resources/: PolyFit.icns  PolyFit.qrc  PolyFit.rc
basic/: CMakeLists.txt  assertions.cpp  assertions.h  attribute.h  attribute_adapter.cpp  attribute_adapter.h  attribute_life_cycle.cpp  attribute_life_cycle.h  attribute_manager.h  basic.pro  basic.vcproj  basic.vcxproj  basic.vcxproj.filters  basic_common.h  basic_types.cpp  basic_types.h  canvas.h  color.h  file_utils.cpp  generic_attributes_io.h  logger.cpp  pointer_iterator.h  progress.cpp  progress.h  rat.cpp  rat.h  raw_attribute_store.cpp  raw_attribute_store.h  record_id.h  smart_pointer.h  stop_watch.cpp  stop_watch.h
code/: CMakeLists.txt  How_to_build.md  How_to_deploy_for_mac.txt
code/3rd_glpk/: NEWS  (+2 more)
examples/: CMakeLists.txt  polyfit_example_without_input_planes.cpp
linear_program_solver/: CMakeLists.txt  linear_program.cpp  linear_program.h  linear_program_io.cpp  linear_program_solver.cpp  linear_program_solver.h  linear_program_solver_SCIP.cpp  linear_program_solver_SCIP.h  linear_program_solver_common.h  stop_watch.cpp  stop_watch.h
math/: CMakeLists.txt  binary_program.cpp  binary_program.h  box.h  line.h  linear_program.cpp  linear_program.h  linear_program_solver.cpp  linear_program_solver.h  linear_program_solver_CBC.cpp  linear_program_solver_GLPK.cpp  linear_program_solver_GUROBI.cpp  linear_program_solver_LPSOLVE.cpp  linear_program_solver_SCIP.cpp  math.pro  math.vcproj  math.vcxproj  math.vcxproj.filters  math_common.h  math_types.h  plane.h  polygon2d.cpp  polygon2d.h  quaternion.h  semi_definite_symmetric_eigen.cpp  vecg.h
method/: CMakeLists.txt  alpha_shape.h  alpha_shape_boundary.cpp  alpha_shape_boundary.h  alpha_shape_cgal.h  alpha_shape_mesh.cpp  alpha_shape_mesh.h  cgal_types.h  face_selection.cpp  face_selection.h  face_selection_gurobi.cpp  face_selection_lpsolve.cpp  face_selection_optimization.cpp  hypothesis_generator.cpp  hypothesis_generator.h  method.pro  method.vcxproj  method.vcxproj.filters  method_global.cpp  method_global.h  polyfit_info.cpp  polyfit_info.h
model/: CMakeLists.txt  iterators.h  kdtree_search.cpp  kdtree_search.h  map_builder.cpp  map_copier.h  map_editor.cpp  map_editor.h  map_geometry.cpp  map_geometry.h  map_io.cpp  map_io.h  model.pro  model.vcproj  model.vcxproj  model.vcxproj.filters  point_set.cpp  point_set.h  point_set_io.cpp  point_set_io.h  point_set_serializer_vg.cpp  point_set_serializer_vg.h  vertex_group.h
renderer/: CMakeLists.txt  glew.c  opengl_info.cpp  opengl_info.h  point_set_render.cpp  point_set_render.h  renderer.pro  renderer.vcproj  renderer.vcxproj  renderer.vcxproj.filters  rendering_styles.h  segment_point_set_render.cpp  surface_render.cpp  surface_render.h
(+1643 files in other folders)
